snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
06fbf5d708cd1d41f1362afc14e7659eb45863a5fc7d1e676585baa97edeb5ac